frr (4.0-0~bionic0+exo1) bionic; urgency=medium

  * Prepare port to Bionic.
  * d/rules: use --enable-cumulus as a configure option.
  * d/source: switch to 3.0 (quilt) format.
  * d/install: do not ship development files, move lib to a private directory.

 -- Vincent Bernat <bernat@debian.org>  Fri, 11 May 2018 15:46:06 +0200

frr (4.0) RELEASED; urgency=medium

  * ISIS-MT - https://tools.ietf.org/html/rfc5120
  * BGP - RPKI (RFC 6810)
  * BGP - v4 labeled unicast as per RFC 3107
  * BGP/Zebra - Type 2 and 3 EVPN with symmetric and asymmetric routing
  * EIGRP - https://tools.ietf.org/html/rfc7868
  * FRR - Tab completion for iface names, prefix-lists, route-maps, BGP peers
  * BABEL - https://tools.ietf.org/html/rfc6126
  * PIM VRF - Added the ability to work with VRF’s to PIM
  * OSPFv2 VRF - Added the ability to work with VRF’s to OSPFv2
  * OSPFv2 Experimental SR - draft-ietf-ospf-segment-routing-extensions-24
  * ZEBRA - Add ability to create a static route that leaks across VRF’s.

 -- FRRouting-Dev <dev@lists.frrouting.org>  Sun, 11 Mar 2018 17:22:20 -0700

frr (3.0.3-1) RELEASED; urgency=medium

  * New Enabled: PIM draft Unnumbered

 -- FRRouting-Dev <dev@lists.frrouting.org>  Wed, 18 Oct 2017 17:01:42 -0700

frr (3.0-1) RELEASED; urgency=medium

  * Added Debian 9 Backport
 
 -- FRRouting-Dev <dev@lists.frrouting.org>  Mon, 16 Oct 2017 03:28:00 -0700

frr (3.0-0) RELEASED; urgency=medium

  * New Enabled: BGP Shutdown Message
  * New Enabled: BGP Large Community
  * New Enabled: BGP RFC 7432 Partial Support w/ Ethernet VPN
  * New Enabled: BGP EVPN RT-5
  * New Enabled: LDP RFC 5561
  * New Enabled: LDP RFC 5918
  * New Enabled: LDP RFC 5919
  * New Enabled: LDP RFC 6667
  * New Enabled: LDP RFC 7473
  * New Enabled: OSPF RFC 4552
  * New Enabled: ISIS SPF Backoff draft
  * New Enabled: PIM Unnumbered Interfaces
  * New Enabled: PIM RFC 4611
  * New Enabled: PIM Sparse Mode
  * New Enabled: NHRP RFC 2332
  * New Enabled: Label Manager