@@ -207,11 +207,14 @@ endif
 	rm debian/tmp/usr/lib/frr/*.la
 	rm debian/tmp/usr/lib/frr/*.a
 
+override_dh_install_init:
+	dh_installinit --restart-after-upgrade
+
 override_dh_systemd_start:
 	dh_systemd_start frr.service
 
 override_dh_systemd_enable:
-	dh_systemd_enable frr.service
+	dh_systemd_enable --restart-after-upgrade frr.service
 
 # backports
 SRCPKG = frr
